[package]
name = "reverse-proxy"
version = "0.1.0"
authors = ["jk-gan <kuhn96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
hyper = { version = "0.14", features = ["full"]}
hyper-rustls = "0.22.1"
anyhow = "1"
